// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Devotional component renders a devotional 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BVLinearGradient
      colors={
        Array [
          4294967295,
          4294506484,
        ]
      }
      locations={null}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTSafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Array [
              Object {
                "flex": 1,
                "overflow": "hidden",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "elevation": 4,
                "shadowColor": "black",
                "shadowOffset": Object {
                  "height": 0.5,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 0.5,
                "zIndex": 1,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#6EC5B8",
                    "bottom": 0,
                    "height": 3,
                    "left": 0,
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "width": 375,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "overflow": "scroll",
                }
              }
            >
              <RCTScrollView
                alwaysBounceHorizontal={false}
                automaticallyAdjustContentInsets={false}
                contentContainerStyle={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                    },
                    Object {
                      "flex": 1,
                    },
                  ]
                }
                horizontal={true}
                keyboardShouldPersistTaps="handled"
                onMomentumScrollBegin={[Function]}
                onMomentumScrollEnd={[Function]}
                onScroll={[Function]}
                onScrollBeginDrag={[Function]}
                onScrollEndDrag={[Function]}
                overScrollMode="never"
                scrollEventThrottle={1}
                scrollsToTop={false}
                showsHorizontalScrollIndicator={false}
              >
                <View>
                  <View
                    accessibilityComponentType="button"
                    accessibilityLabel="DEVOTIONAL"
                    accessibilityTraits={
                      Array [
                        "button",
                        "selected",
                      ]
                    }
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "opacity": 1,
                            "padding": 8,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 11.52,
                              "paddingTop": 15.21,
                            }
                          }
                        >
                          Devotional
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType="button"
                    accessibilityLabel="SCRIPTURE"
                    accessibilityTraits="button"
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "opacity": 0.7,
                            "padding": 8,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 11.52,
                              "paddingTop": 15.21,
                            }
                          }
                        >
                          Scripture
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </RCTScrollView>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RCTScrollView
              alwaysBounceHorizontal={false}
              automaticallyAdjustContentInsets={false}
              bounces={false}
              contentContainerStyle={null}
              contentOffset={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              directionalLockEnabled={true}
              horizontal={true}
              keyboardDismissMode="on-drag"
              keyboardShouldPersistTaps="always"
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              overScrollMode="never"
              pagingEnabled={true}
              scrollEnabled={true}
              scrollEventThrottle={1}
              scrollsToTop={false}
              showsHorizontalScrollIndicator={false}
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View>
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    Object {
                      "overflow": "hidden",
                      "width": 750,
                    }
                  }
                >
                  <RCTScrollView>
                    <View>
                      <View
                        style={
                          Object {
                            "paddingHorizontal": 16,
                            "paddingVertical": 0,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Black",
                              "fontSize": 36,
                              "lineHeight": 41.4,
                              "paddingBottom": 25.92,
                              "paddingTop": 38.88,
                            }
                          }
                        >
                          God is Our Banner
                        </Text>
                        <Text
                          style={
                            Object {
                              "color": "#00676D",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 24,
                              "textAlign": "center",
                              "textDecorationLine": "underline",
                            }
                          }
                        >
                          <Text
                            onPress={[Function]}
                            padded={true}
                            style={
                              Object {
                                "color": "#17B582",
                              }
                            }
                          >
                            1 Corinthians 15:57, Exodus 17:8-15
                          </Text>
                        </Text>
                        <View>
                          <Text>
                            Some content!
                          </Text>
                        </View>
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
                <View
                  accessibilityElementsHidden={true}
                  importantForAccessibility="no-hide-descendants"
                  style={
                    Object {
                      "overflow": "hidden",
                      "width": 750,
                    }
                  }
                >
                  <RCTScrollView>
                    <View>
                      <View
                        style={
                          Object {
                            "paddingHorizontal": 16,
                            "paddingVertical": 16,
                          }
                        }
                      >
                        <View>
                          <Text
                            style={
                              Object {
                                "color": "#303030",
                                "fontFamily": "InterUI-Bold",
                                "fontSize": 16,
                                "lineHeight": 23.04,
                              }
                            }
                          >
                            <Text
                              style={
                                Object {
                                  "color": "#303030",
                                  "fontFamily": "InterUI-Bold",
                                  "fontSize": 16,
                                  "lineHeight": 23.04,
                                }
                              }
                            >
                              1 Corinthians 15:57
                            </Text>
                             
                            <Text
                              style={
                                Object {
                                  "color": "#505050",
                                  "fontFamily": "InterUI-Bold",
                                  "fontSize": 12,
                                  "lineHeight": 17.28,
                                }
                              }
                            >
                              WEB
                            </Text>
                          </Text>
                          <View>
                            <View
                              style={
                                Object {
                                  "paddingBottom": 17.28,
                                }
                              }
                            >
                              <Text
                                bold={false}
                                italic={false}
                                style={
                                  Object {
                                    "color": "#303030",
                                    "fontFamily": "DroidSerif",
                                    "fontSize": 16,
                                    "lineHeight": 26,
                                  }
                                }
                              >
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    57
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    But thanks be to God, who gives us the victory through our Lord Jesus Christ. 
                                  </Text>
                                </Text>
                              </Text>
                            </View>
                          </View>
                          <Text
                            bold={false}
                            italic={false}
                            style={
                              Object {
                                "color": "#505050",
                                "fontFamily": "InterUI-Regular",
                                "fontSize": 9.6,
                                "lineHeight": 10.37,
                              }
                            }
                          />
                        </View>
                        <View>
                          <Text
                            style={
                              Object {
                                "color": "#303030",
                                "fontFamily": "InterUI-Bold",
                                "fontSize": 16,
                                "lineHeight": 23.04,
                              }
                            }
                          >
                            <Text
                              style={
                                Object {
                                  "color": "#303030",
                                  "fontFamily": "InterUI-Bold",
                                  "fontSize": 16,
                                  "lineHeight": 23.04,
                                }
                              }
                            >
                              Exodus 17:8-15
                            </Text>
                             
                            <Text
                              style={
                                Object {
                                  "color": "#505050",
                                  "fontFamily": "InterUI-Bold",
                                  "fontSize": 12,
                                  "lineHeight": 17.28,
                                }
                              }
                            >
                              WEB
                            </Text>
                          </Text>
                          <View>
                            <View
                              style={
                                Object {
                                  "paddingBottom": 17.28,
                                }
                              }
                            >
                              <Text
                                bold={false}
                                italic={false}
                                style={
                                  Object {
                                    "color": "#303030",
                                    "fontFamily": "DroidSerif",
                                    "fontSize": 16,
                                    "lineHeight": 26,
                                  }
                                }
                              >
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    8
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    Then Amalek came and fought with Israel in Rephidim. 
                                  </Text>
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    9
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    Moses said to Joshua, “Choose men for us, and go out to fight with Amalek. Tomorrow I will stand on the top of the hill with God’s rod in my hand.” 
                                  </Text>
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    10
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    So Joshua did as Moses had told him, and fought with Amalek; and Moses, Aaron, and Hur went up to the top of the hill. 
                                  </Text>
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    11
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    When Moses held up his hand, Israel prevailed. When he let down his hand, Amalek prevailed. 
                                  </Text>
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    12
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    But Moses’ hands were heavy; so they took a stone, and put it under him, and he sat on it. Aaron and Hur held up his hands, the one on the one side, and the other on the other side. His hands were steady until sunset. 
                                  </Text>
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    13
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    Joshua defeated Amalek and his people with the edge of the sword. 
                                  </Text>
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    14
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    Yahweh said to Moses, “Write this for a memorial in a book, and rehearse it in the ears of Joshua: that I will utterly blot out the memory of Amalek from under the sky.” 
                                  </Text>
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#505050",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 9.6,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                   
                                  <Text>
                                    15
                                  </Text>
                                   
                                </Text>
                                <Text
                                  bold={false}
                                  italic={false}
                                  style={
                                    Object {
                                      "color": "#303030",
                                      "fontFamily": "DroidSerif",
                                      "fontSize": 16,
                                      "lineHeight": 26,
                                    }
                                  }
                                >
                                  <Text>
                                    Moses built an altar, and called its name “Yahweh our Banner”.
                                  </Text>
                                </Text>
                              </Text>
                            </View>
                          </View>
                          <Text
                            bold={false}
                            italic={false}
                            style={
                              Object {
                                "color": "#505050",
                                "fontFamily": "InterUI-Regular",
                                "fontSize": 9.6,
                                "lineHeight": 10.37,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </RCTSafeAreaView>
    </BVLinearGradient>
  </View>
</RCTSafeAreaView>
`;

exports[`the Devotional component renders a loading state 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BVLinearGradient
      colors={
        Array [
          4294967295,
          4294506484,
        ]
      }
      locations={null}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTSafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Array [
              Object {
                "flex": 1,
                "overflow": "hidden",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "elevation": 4,
                "shadowColor": "black",
                "shadowOffset": Object {
                  "height": 0.5,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 0.5,
                "zIndex": 1,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#6EC5B8",
                    "bottom": 0,
                    "height": 3,
                    "left": 0,
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "width": 375,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "overflow": "scroll",
                }
              }
            >
              <RCTScrollView
                alwaysBounceHorizontal={false}
                automaticallyAdjustContentInsets={false}
                contentContainerStyle={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                    },
                    Object {
                      "flex": 1,
                    },
                  ]
                }
                horizontal={true}
                keyboardShouldPersistTaps="handled"
                onMomentumScrollBegin={[Function]}
                onMomentumScrollEnd={[Function]}
                onScroll={[Function]}
                onScrollBeginDrag={[Function]}
                onScrollEndDrag={[Function]}
                overScrollMode="never"
                scrollEventThrottle={1}
                scrollsToTop={false}
                showsHorizontalScrollIndicator={false}
              >
                <View>
                  <View
                    accessibilityComponentType="button"
                    accessibilityLabel="DEVOTIONAL"
                    accessibilityTraits={
                      Array [
                        "button",
                        "selected",
                      ]
                    }
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "opacity": 1,
                            "padding": 8,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 11.52,
                              "paddingTop": 15.21,
                            }
                          }
                        >
                          Devotional
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType="button"
                    accessibilityLabel="SCRIPTURE"
                    accessibilityTraits="button"
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "opacity": 0.7,
                            "padding": 8,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 11.52,
                              "paddingTop": 15.21,
                            }
                          }
                        >
                          Scripture
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </RCTScrollView>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RCTScrollView
              alwaysBounceHorizontal={false}
              automaticallyAdjustContentInsets={false}
              bounces={false}
              contentContainerStyle={null}
              contentOffset={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              directionalLockEnabled={true}
              horizontal={true}
              keyboardDismissMode="on-drag"
              keyboardShouldPersistTaps="always"
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              overScrollMode="never"
              pagingEnabled={true}
              scrollEnabled={true}
              scrollEventThrottle={1}
              scrollsToTop={false}
              showsHorizontalScrollIndicator={false}
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View>
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    Object {
                      "overflow": "hidden",
                      "width": 750,
                    }
                  }
                >
                  <RCTScrollView>
                    <View>
                      <View
                        style={
                          Object {
                            "paddingHorizontal": 16,
                            "paddingVertical": 0,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Black",
                              "fontSize": 36,
                              "lineHeight": 41.4,
                              "paddingBottom": 25.92,
                              "paddingTop": 38.88,
                            }
                          }
                        >
                          God is Our Banner
                        </Text>
                        <Text
                          style={
                            Object {
                              "color": "#00676D",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 24,
                              "textAlign": "center",
                              "textDecorationLine": "underline",
                            }
                          }
                        >
                          <Text
                            onPress={[Function]}
                            padded={true}
                            style={
                              Object {
                                "color": "#17B582",
                              }
                            }
                          >
                            1 Corinthians 15:57, Exodus 17:8-15
                          </Text>
                        </Text>
                        <View>
                          <Text>
                            Some content!
                          </Text>
                        </View>
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
                <View
                  accessibilityElementsHidden={true}
                  importantForAccessibility="no-hide-descendants"
                  style={
                    Object {
                      "overflow": "hidden",
                      "width": 750,
                    }
                  }
                >
                  <RCTScrollView>
                    <View>
                      <View
                        style={
                          Object {
                            "paddingHorizontal": 16,
                            "paddingVertical": 16,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "40%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "60%",
                              }
                            }
                          />
                        </View>
                        <View>
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "40%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "60%",
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </RCTSafeAreaView>
    </BVLinearGradient>
  </View>
</RCTSafeAreaView>
`;

exports[`the Devotional component renders even with empty scripture array 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BVLinearGradient
      colors={
        Array [
          4294967295,
          4294506484,
        ]
      }
      locations={null}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTSafeAreaView
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Array [
              Object {
                "flex": 1,
                "overflow": "hidden",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "elevation": 4,
                "shadowColor": "black",
                "shadowOffset": Object {
                  "height": 0.5,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 0.5,
                "zIndex": 1,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#6EC5B8",
                    "bottom": 0,
                    "height": 3,
                    "left": 0,
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "width": 375,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "overflow": "scroll",
                }
              }
            >
              <RCTScrollView
                alwaysBounceHorizontal={false}
                automaticallyAdjustContentInsets={false}
                contentContainerStyle={
                  Array [
                    Object {
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                    },
                    Object {
                      "flex": 1,
                    },
                  ]
                }
                horizontal={true}
                keyboardShouldPersistTaps="handled"
                onMomentumScrollBegin={[Function]}
                onMomentumScrollEnd={[Function]}
                onScroll={[Function]}
                onScrollBeginDrag={[Function]}
                onScrollEndDrag={[Function]}
                overScrollMode="never"
                scrollEventThrottle={1}
                scrollsToTop={false}
                showsHorizontalScrollIndicator={false}
              >
                <View>
                  <View
                    accessibilityComponentType="button"
                    accessibilityLabel="DEVOTIONAL"
                    accessibilityTraits={
                      Array [
                        "button",
                        "selected",
                      ]
                    }
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "opacity": 1,
                            "padding": 8,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 11.52,
                              "paddingTop": 15.21,
                            }
                          }
                        >
                          Devotional
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType="button"
                    accessibilityLabel="SCRIPTURE"
                    accessibilityTraits="button"
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      pointerEvents="none"
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "justifyContent": "center",
                            "opacity": 0.7,
                            "padding": 8,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 11.52,
                              "paddingTop": 15.21,
                            }
                          }
                        >
                          Scripture
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </RCTScrollView>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RCTScrollView
              alwaysBounceHorizontal={false}
              automaticallyAdjustContentInsets={false}
              bounces={false}
              contentContainerStyle={null}
              contentOffset={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              directionalLockEnabled={true}
              horizontal={true}
              keyboardDismissMode="on-drag"
              keyboardShouldPersistTaps="always"
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              overScrollMode="never"
              pagingEnabled={true}
              scrollEnabled={true}
              scrollEventThrottle={1}
              scrollsToTop={false}
              showsHorizontalScrollIndicator={false}
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View>
                <View
                  accessibilityElementsHidden={false}
                  importantForAccessibility="auto"
                  style={
                    Object {
                      "overflow": "hidden",
                      "width": 750,
                    }
                  }
                >
                  <RCTScrollView>
                    <View>
                      <View
                        style={
                          Object {
                            "paddingHorizontal": 16,
                            "paddingVertical": 0,
                          }
                        }
                      >
                        <Text
                          padded={true}
                          style={
                            Object {
                              "color": "#303030",
                              "fontFamily": "InterUI-Black",
                              "fontSize": 36,
                              "lineHeight": 41.4,
                              "paddingBottom": 25.92,
                              "paddingTop": 38.88,
                            }
                          }
                        >
                          God is Our Banner
                        </Text>
                        <Text
                          style={
                            Object {
                              "color": "#00676D",
                              "fontFamily": "InterUI-Bold",
                              "fontSize": 16,
                              "lineHeight": 23.04,
                              "paddingBottom": 24,
                              "textAlign": "center",
                              "textDecorationLine": "underline",
                            }
                          }
                        >
                          <Text
                            onPress={[Function]}
                            padded={true}
                            style={
                              Object {
                                "color": "#17B582",
                              }
                            }
                          >
                            1 Corinthians 15:57, Exodus 17:8-15
                          </Text>
                        </Text>
                        <View>
                          <Text>
                            Some content!
                          </Text>
                        </View>
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
                <View
                  accessibilityElementsHidden={true}
                  importantForAccessibility="no-hide-descendants"
                  style={
                    Object {
                      "overflow": "hidden",
                      "width": 750,
                    }
                  }
                >
                  <RCTScrollView>
                    <View>
                      <View
                        style={
                          Object {
                            "paddingHorizontal": 16,
                            "paddingVertical": 16,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "40%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "60%",
                              }
                            }
                          />
                        </View>
                        <View>
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "40%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "100%",
                              }
                            }
                          />
                          <View
                            style={
                              Object {
                                "alignSelf": "stretch",
                                "backgroundColor": "#A5A5A5",
                                "borderRadius": 16,
                                "height": 16,
                                "marginVertical": 5,
                                "width": "60%",
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </RCTSafeAreaView>
    </BVLinearGradient>
  </View>
</RCTSafeAreaView>
`;
